--- a/u16.04-ondrej/Dockerfile
+++ b/u16.04-ondrej/Dockerfile
@@ -1,10 +1,17 @@
 # Base image
 FROM ubuntu:16.04
 
-MAINTAINER Erik Kaareng-Sunde esu@enonic.com
+LABEL "creator"="Erik Kaareng-Sunde erikks@redpill-linpro.com"
+LABEL "maintainer"="Diego Pasten dap@enonic.com"
 
-RUN apt-get update && apt-get install -y  software-properties-common python-software-properties && LC_ALL=C.UTF-8 add-apt-repository ppa:ondrej/apache2
-RUN apt-get update && apt-get install -y apache2
+RUN apt-get update -y \
+  && apt-get upgrade -y \
+  && apt-get install -y software-properties-common \
+  && LC_ALL=C.UTF-8 add-apt-repository ppa:ondrej/apache2 \
+  && apt-get update \
+  && apt-get install -y apache2 \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 ENV APACHE_CONFDIR /etc/apache2
 ENV APACHE_ENVVARS $APACHE_CONFDIR/envvars
@@ -16,22 +23,19 @@ ENV APACHE_LOCK_DIR /var/lock/apache2
 ENV APACHE_LOG_DIR /var/log/apache2
 ENV LANG C
 
-RUN mkdir -p $APACHE_RUN_DIR $APACHE_LOCK_DIR $APACHE_LOG_DIR
-
-RUN find "$APACHE_CONFDIR" -type f -exec sed -ri ' \
+RUN mkdir -p $APACHE_RUN_DIR $APACHE_LOCK_DIR $APACHE_LOG_DIR \
+  && find "$APACHE_CONFDIR" -type f -exec sed -ri ' \
     s!^(\s*CustomLog)\s+\S+!\1 /proc/self/fd/1!g; \
     s!^(\s*ErrorLog)\s+\S+!\1 /proc/self/fd/2!g; \
 ' '{}' ';'
 
 COPY sites-available/000-default.conf /etc/apache2/sites-available/000-default.conf
-
 COPY sites-available/default-ssl.conf /etc/apache2/sites-available/default-ssl.conf
-RUN a2ensite default-ssl && a2enmod ssl
-
 COPY sites-available/statuspage.conf /etc/apache2/sites-available/statuspage.conf
-RUN a2ensite statuspage
 
-
+RUN a2ensite statuspage \
+  && a2ensite default-ssl \
+  && a2enmod ssl
 
 EXPOSE 80 443 8001
 
